<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sky_medieval">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_entry_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPlayerName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_entry_hint"
            android:textColor="@color/white"
            android:textColorHint="#AAAAAA"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnConfirmName"
            android:layout_width="200dp"
            android:layout_height="56dp"
            android:text="@string/name_entry_btn_confirm"
            android:background="@drawable/btn_arctic_primary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/etPlayerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
